k8s/prod/consumer-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: k8s-example
  name: consumer-service
spec:
  type: ClusterIP
  selector:
    app: consumer-service
  ports:
    - name: http
      port: 80
      targetPort: 80
