k8s/prod/provider-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: k8s-example
  name: provider-service
spec:
  type: ClusterIP
  selector:
    app: provider-service
  ports:
    - name: http
      port: 80
      targetPort: 80
